--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="monetag" content="3f1e4f2b60d2dd5305688e79ae395482">
   <title>DOOSH HUB</title>
 
   <!-- Tailwind CSS -->
