--- a/support.html
+++ b/support.html
@@ -120,7 +120,7 @@
   <div class="container">
     <h2>Help Us Shine Brighter</h2>
     <p>Thank you for visiting. If you love what we do, your support helps us stay online and deliver more magic every day!</p>
-
+<p><strong>Disclaimer:</strong> All ads on this page are managed by Monetag. We do not promote or control the ad content. Please do not download anything suspicious and avoid interacting with adult or pirated content. This page is purely for supporting our hosting and content efforts.</p>
     <h3>How to Support:</h3>
     <ol>
       <li>Click the glowing buttons below.</li>
