--- a/anime/windbreakerseason1.html
+++ b/anime/windbreakerseason1.html
@@ -11,21 +11,30 @@
 
   <div class="p-6">
     <h1 class="text-4xl font-bold text-pink-600">Wind Breaker Season 1</h1>
-    <p class="text-gray-400 mb-6">Wind Breaker Season 1</p>
+    <p class="text-gray-400 mb-6">Wind Breaker Season 1 - All Episodes</p>
 
     <!-- Video Player -->
     <div class="mb-4">
-      <iframe id="videoPlayer" src="https://drive.google.com/file/d/1pP5nNu6QKWqq26zVEEWaud2LAfAdNVaX/preview" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
+      <iframe id="videoPlayer" width="100%" height="400" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen class="rounded shadow"></iframe>
       <div class="mt-2">
-        <h2 id="episodeTitle" class="text-xl font-semibold">Wind Breaker S01</h2>
-        <p id="episodeDesc" class="text-gray-400">Wind Breaker S01</p>
-        <p id="uploadDate" class="text-gray-600 text-sm">Uploaded: 2025-04-27</p>
-        <p class="text-gray-500 text-xs mt-2">Note: After clicking an episode, you may see up to 2 ads before your episode starts playing. Thanks for supporting us!</p>
+        <h2 id="episodeTitle" class="text-xl font-semibold">Select an episode to play</h2>
+        <p id="episodeDesc" class="text-gray-400">Choose from the list of episodes below.</p>
+        <p id="uploadDate" class="text-gray-600 text-sm">Uploaded: Not Available</p>
       </div>
     </div>
 
     <!-- Episode List -->
-    <div id="episodeList" class="space-y-3"></div>
+    <div id="episodeList" class="space-y-3 mb-6"></div>
+
+    <!-- Support Us Link -->
+    <div class="mt-6 text-center">
+      <a href="support.html" class="text-pink-600 hover:underline text-xl">Support Us</a>
+    </div>
+
+    <!-- Muse Asia Thanks Section -->
+    <div class="mt-6 text-center text-gray-400">
+      <p>Special thanks to <strong>Muse India/Asia</strong> for providing the official content. All rights to the anime belong to its respective owners.</p>
+    </div>
   </div>
 
   <script type="text/javascript">
@@ -36,73 +45,79 @@
     const episodes = [
       {
         title: "Wind Breaker Season 1 Episode 1",
-        link: "https://drive.google.com/file/d/1pP5nNu6QKWqq26zVEEWaud2LAfAdNVaX/preview",
+        link: "https://youtu.be/ne0Y0vyjxpE?si=Jh2XBsFygn2-CDEB",
         description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       },
       {
         title: "Wind Breaker Season 1 Episode 2",
-        link: "https://drive.google.com/file/d/1Awns2ag2uDOnhUcsfxTP1kDbHqMuuSeu/preview",
+        link: "https://youtu.be/J2568cnOa1g?si=jp_ZNl8OPNudRRKc",
         description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       },
       {
         title: "Wind Breaker Season 1 Episode 3",
-        link: "https://drive.google.com/file/d/1iWxi8KgWMG1xLRTXyh48GyicU0Gt3-qY/preview",
+        link: "https://youtu.be/QOMv17IjJAU?si=kiiOcN9SukZ8IjF_",
         description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       },
       {
         title: "Wind Breaker Season 1 Episode 4",
-        link: "https://drive.google.com/file/d/1XK2YeznZg7XoiNhDDY5UzTOUq27Ylxod/preview",
+        link: "https://youtu.be/MT7WzTJZCxg?si=pNnTOybcpnB5X17n",
         description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       },
       {
         title: "Wind Breaker Season 1 Episode 5",
-        link: "https://drive.google.com/file/d/1bZhuST7oWNgPV_-I2sZotXsYN_BquadU/preview",
+        link: "https://youtu.be/4sRfndp1vAM?si=qKzd9rY8k_FW_X4r",
         description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       },
       {
         title: "Wind Breaker Season 1 Episode 6",
-        link: "https://drive.google.com/file/d/1mldGjxnkg8C_UsYKpWCKGQKLlf57Zcv8/preview",
+        link: "https://youtu.be/oTvQ-5BNC6w?si=IN89kqr0nXCdBUpc",
         description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       },
       {
         title: "Wind Breaker Season 1 Episode 7",
-        link: "https://drive.google.com/file/d/1qfo-JMGIhOpMQIYIFqehgj0ofcX7lMIr/preview",
+        link: "https://youtu.be/Em5lFIz_kxU?si=u5vZlfvPY4Yvj2Ss",
         description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       },
       {
         title: "Wind Breaker Season 1 Episode 8",
-        link: "https://drive.google.com/file/d/1RIEtOzOIFwB8-BzWg7NfktFLVpayhPBo/preview",
+        link: "https://youtu.be/SBaGblvd4mU?si=c1pBS8u7SqPE_5V4",
         description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       },
       {
         title: "Wind Breaker Season 1 Episode 9",
-        link: "https://drive.google.com/file/d/16nZCbYtJ8AbVLB-KWJdoNTGGTlaVMIDt/preview",
+        link: "https://youtu.be/43Hj2GySjgA?si=fMUC_6l8pfvZ5W1-",
         description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       },
       {
         title: "Wind Breaker Season 1 Episode 10",
-        link: "https://drive.google.com/file/d/1Nt37GqgUuqiFw5pW9OJMS5LGhtUj3CWv/preview",
+        link: "https://youtu.be/TIpodnZtFP4?si=zROoRvVLuxi1R2qi",
         description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       },
       {
         title: "Wind Breaker Season 1 Episode 11",
-        link: "https://drive.google.com/file/d/1NSeH36nxjf5FES96xvQHzrtlFS0WiYyG/preview",
+        link: "https://youtu.be/_L-UG_jvnM4?si=mDE3ByznSoUDpul0",
         description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       },
       {
         title: "Wind Breaker Season 1 Episode 12",
-        link: "https://drive.google.com/file/d/1K0m7iAEwoVMb4FOgqYpsyYbOtzgwBJ7j/preview",
+        link: "https://youtu.be/skAwsc6UL8A?si=7Ak1C8Wsb6nGwpzB",
+        description: "Wind Breaker Season 1",
+        uploadDate: "2025-04-25"
+      },
+      {
+        title: "Wind Breaker Season 1 Episode 13",
+        link: "https://youtu.be/-xUk9E2iQQY?si=yiPWyVEvoqM8YpIH",
         description: "Wind Breaker Season 1",
         uploadDate: "2025-04-25"
       }
